Notification reaad refactor